# FaultMaven

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENDPOINT_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_COMPLETE.md  NEXT_STEPS.md  README.md  README_BETA_DRAFT.md  alembic.ini  docker-compose.yml  faultmaven_test  pyproject.toml  test_auth.sh
.claude/commands/: README.md  agent-principles.md  api-docs-writer.md  code-reviewer.md  devops-engineer.md  llm-specialist.md  microservice-architect.md  security-auditor.md  test-engineer.md  vectordb-expert.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
alembic/: env.py
alembic/versions/: 20241221_0000_initial_schema.py  20241224_0001_add_case_reports.py
dashboard/: eslint.config.js
dashboard/.github/: pull_request_template.md
dashboard/.github/workflows/: policy-no-direct-k8s-deploy.yml
dashboard/src/components/: ConfirmDialog.tsx  DocumentCard.tsx  DocumentList.tsx  ErrorBoundary.tsx  PageHeader.tsx  PaginationControls.tsx  UploadModal.tsx  UploadZone.tsx
dashboard/src/context/: AuthContext.tsx
dashboard/src/hooks/: useKBList.ts
dashboard/src/test/: App.test.tsx  setup.ts
dashboard/src/utils/: debounce.ts
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_EVALUATION.md  COPILOT_VERIFICATION_CHECKLIST.md  DEPLOYMENT.md  DESIGN_V2_AMENDMENT.md  DEVELOPMENT.md  DOCUMENTATION_CLEANUP_TODO.md  ENGINE_INTEGRATION_STATUS.md  FAQ.md  FAULTMAVEN_MONO_DEPRECATION_ANALYSIS.md  HYPOTHESIS_MANAGER_TEST_COVERAGE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TASK_BRIEF.md  INTEGRATION_QUICK_REFERENCE.md  INVESTIGATION_FRAMEWORK_DESIGN_AUDIT.md  MIGRATION_PHASE_4_COMPLETE.md  MIGRATION_PHASE_5_PLAN.md  MIGRATION_PHASE_6_PLAN.md  MIGRATION_PLAN.md  MODULAR_MONOLITH_DESIGN.md  PHASE_1_COMPLETE_NEXT_STEPS.md  README.md  ROADMAP.md  SECURITY.md  SYSTEM_DESIGN.md  TECHNICAL_DEBT.md  TESTING_PHASE_4_INTEGRATION.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  faq.md
docs/api/: README.md
docs/architecture/: README.md  design-specifications.md  overview.md
docs/archive/2025/12/: API_PARITY_REPORT.md  AUTO_WIRE_INVESTIGATION_DESIGN.md  COMPLETE_API_GAP_ANALYSIS.md  DESIGN_AUDIT_RESOLUTION.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_TASK_BRIEF.md  MIGRATION_PHASE_5_PLAN.md  (+7 more)
docs/deploy-templates/: .env.example  README-deploy.md  configs-gateway.yml  docker-compose.yml  scripts-init.sh
docs/development/: README.md  setup.md
docs/operations/: README.md  deployment.md
docs/reference/: README.md
docs/reviews/: pr27-architectural-review.md  pr27-diagrams.md
docs/working/: CHECKPOINT_2025_12_27.md  DOCUMENTATION_CLEANUP_COMPLETE.md  FEATURE_PARITY_TRACKING.md  MILESTONE_ENGINE_TEST_COVERAGE.md  OODA_ENGINE_TEST_COVERAGE.md  README.md  TESTING_IMPLEMENTATION_ROADMAP.md  documentation-analysis.md  investigation-framework-status.md
scripts/: README.md  api_test.sh  fm_dev.py  generate_api_docs.py  generate_openapi_spec.py  health_check.sh  kb_manager.py  logs.sh  start.sh  stop.sh  test.sh
scripts/manual-tests/: README.md  test_api.sh  test_cases.sh  test_evidence.sh  test_sessions.sh
src/faultmaven/: __init__.py  app.py  database.py  dependencies.py  logging_config.py  models.py
src/faultmaven/config/: __init__.py  database.py  llm.py  observability.py  redis.py  security.py  settings.py  storage.py
src/faultmaven/health/: __init__.py  checker.py  router.py
src/faultmaven/infrastructure/: interfaces.py  memory_impl.py  redis_impl.py
src/faultmaven/middleware/: __init__.py  logging.py
src/faultmaven/providers/: core.py  interfaces.py
src/faultmaven/workers/: __init__.py  celery_app.py  router.py  tasks.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  conftest.py  test_agent_endpoints.py  test_auth_endpoints.py  test_case_endpoints.py  test_error_handling.py  test_evidence_endpoints.py  test_knowledge_endpoints.py  test_session_endpoints.py
tests/e2e/: test_system_flow.py
tests/factories/: __init__.py  case.py  document.py  evidence.py  user.py
tests/integration/modules/: __init__.py  test_auth_service.py  test_case_service.py  test_evidence_service.py  test_knowledge_service.py
tests/unit/: conftest.py
tests/utils/: auth.py
(+56 files in other folders)
